--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sockjs-client": "^1.4.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vuex": "^3.3.0",
     "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
