--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.7.0",
     "core-js": "^3.6.4",
+    "eslint-plugin-cypress": "^2.11.1",
     "sockjs-client": "^1.4.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
@@ -25,6 +26,7 @@
     "@vue/cli-plugin-eslint": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
     "babel-eslint": "^10.0.3",
+    "compression-webpack-plugin": "^4.0.0",
     "cypress": "^4.8.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
