--- a/package.json
+++ b/package.json
@@ -5,31 +5,34 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "cypress": "cypress open"
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.7.0",
-    "core-js": "^3.6.4",
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.15.0",
+    "core-js": "^3.6.5",
     "eslint-plugin-cypress": "^2.11.1",
     "sockjs-client": "^1.4.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6",
+    "vue-router": "^3.3.4",
     "vue-stars": "^1.2.2",
-    "vuex": "^3.3.0",
+    "vuex": "^3.4.0",
     "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.2.0",
-    "@vue/cli-plugin-eslint": "~4.2.0",
-    "@vue/cli-service": "~4.2.0",
-    "babel-eslint": "^10.0.3",
+    "@vue/cli-plugin-babel": "^4.2.3",
+    "@vue/cli-plugin-eslint": "^4.2.3",
+    "@vue/cli-plugin-unit-jest": "^4.4.4",
+    "@vue/cli-service": "^4.2.3",
+    "@vue/test-utils": "^1.0.3",
+    "babel-eslint": "^10.1.0",
     "compression-webpack-plugin": "^4.0.0",
     "cypress": "^4.8.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.1.2",
+    "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -47,6 +50,17 @@
     "rules": {},
     "plugins": [
       "cypress"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/__tests__/*.{j,t}s?(x)",
+          "**/tests/unit/**/*.spec.{j,t}s?(x)"
+        ],
+        "env": {
+          "jest": true
+        }
+      }
     ]
   },
   "browserslist": [
